# kanga-dpdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/kanga-dpdk-build/: Cargo.toml
crates/kanga-dpdk-build/src/: lib.rs
crates/kanga-dpdk-rte-eal-sys/: Cargo.toml  allowlist.txt  bindings.h  build.rs  rust_accessors.c  rust_accessors.h
crates/kanga-dpdk-rte-eal-sys/src/: lib.rs
crates/kanga-dpdk-rte-kvargs-sys/: Cargo.toml  allowlist.txt  bindings.h  build.rs
crates/kanga-dpdk-rte-kvargs-sys/src/: lib.rs
crates/kanga-dpdk-rte-log-sys/: Cargo.toml  allowlist.txt  bindings.h  blocklist.txt  build.rs
crates/kanga-dpdk-rte-log-sys/src/: lib.rs
crates/kanga-dpdk-rte-mbuf-sys/: Cargo.toml  allowlist.txt  bindings.h  build.rs  rust_accessors.c  rust_accessors.h
crates/kanga-dpdk-rte-mbuf-sys/src/: lib.rs
crates/kanga-dpdk-rte-mempool-sys/: Cargo.toml  allowlist.txt  bindings.h  build.rs  rust_accessors.c  rust_accessors.h
crates/kanga-dpdk-rte-mempool-sys/src/: lib.rs
crates/kanga-dpdk-rte-ring-sys/: Cargo.toml  allowlist.txt  bindings.h  build.rs  opaque.txt  rust_accessors.c  rust_accessors.h
crates/kanga-dpdk-rte-ring-sys/src/: lib.rs
crates/kanga-dpdk-rte-telemetry-sys/: Cargo.toml  allowlist.txt  bindings.h  build.rs
crates/kanga-dpdk-rte-telemetry-sys/src/: lib.rs
crates/kanga-dpdk-rte-timer-sys/: Cargo.toml  allowlist.txt  bindings.h  build.rs
crates/kanga-dpdk-rte-timer-sys/src/: lib.rs
crates/kanga-dpdk-test-binary/: Cargo.toml
crates/kanga-dpdk-test-binary/src/: main.rs
