[package]
name = "kanga-dpdk-rte-eal-sys"
description = "FFI bindings to the DPDK rte_eal library"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
build = "build.rs"
links = "rte_eal"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(dpdk_link_mode, values("dynamic", "static"))',
    'cfg(dpdk_major, values(any()))',
    'cfg(dpdk_minor, values(any()))',
]

[dependencies]

[build-dependencies]
cc = "1.2.23"
kanga-dpdk-build = { path = "../kanga-dpdk-build" }
